# open-flow

./: .gitignore  README.md  main.py  pyproject.toml
src/config/: config_manager.py  options.py  settings.py  user_config.json
src/core/: command_editor.py  editor.py  system_tray.py  transcriber.py
src/prompts/: editor.json
src/ui/: __init__.py  config_window.py  status_indicator.py  system_tray.py
src/ui/components/: __init__.py  form_section.py  labeled_combobox.py  labeled_entry.py  status_bar.py
src/ui/sections/: __init__.py  general_section.py  transcription_section.py
src/utils/: clipboard.py  feedback.py  ollama_client.py  prompt_manager.py  record.py  speech_to_text.py
